syntax = "proto3";

package audit;
option java_multiple_files = true;
option java_package = "com.wncsl.grpc.audit";

//Audit Service

enum OPERATION {
  INSERT = 0;
  EDIT = 1;
  REMOVE = 2;
  RETRIEVE = 3;
}

enum STATUS{
  SUCCESS = 0;
  FAILURE = 1;
  DENIED = 2;
}

enum ACTION{
  CREATE = 0;
  UPDATE = 1;
  DELETE = 2;
}

message Token {
  string value = 1;
}

message Response {
  STATUS status = 1;
  int32 code = 2;
  string object = 3;
  string message = 4;
}

message UserActionGrpc {
  Token token = 1;
  string service = 2;
  string action = 3;
  string objectName = 4;
  string objectUuid = 5;
  string objectValue = 6;
  string userUuid = 7;
  string actionAt = 8;
  OPERATION operation = 9;
}

service AuditService {
  rpc addUserAction(UserActionGrpc) returns (Response) {}
}
